@@ -5,7 +5,8 @@ GNomEx Release Notes
 - Fixed printable request form for Illumina HiSeq to show barcode (also other code that should test for both GAIIX and HiSeq like sample quality billing plug-in)
 - Fixed billing summary report by lab to include HiSeq in Solexa totals.
 - Work around unreachable orion dtd in datasources.xml by using dummy entity resolver in lucene BuildIndex java app
-
+- Change Illumina Lib QC plug-in to only create billing item if lab prepped own library (seqPrepByCore=N)
+- Bypass creating sample quality billing items and lib prep billing items on Illumina requests where the lab prepped its own library.
 4.8.1 (Jul 6, 2010)
 -----------------------
 - Replaced seq lib treatments with request categories
